# pf-blotter-fix

./: .gitignore  CONTRIBUTING.md  DEMO_SCRIPT.md  DESIGN.md  README.md  TECHNICAL.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
pf-blotter_backend/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py  railway.toml
pf-blotter_backend/config/: acceptor.cfg  initiator.cfg
pf-blotter_backend/include/qfblotter/: AuditLog.hpp  FixApplication.hpp  HttpServer.hpp  Json.hpp  Logger.hpp  MarketSim.hpp  OrderStore.hpp  Persistence.hpp  WebSocket.hpp
pf-blotter_backend/scripts/: dev_env.sh
pf-blotter_backend/src/: AuditLog.cpp  FixApplication.cpp  HttpServer.cpp  Logger.cpp  MarketSim.cpp  OrderStore.cpp  Persistence.cpp  WebSocket.cpp  gateway_main.cpp  sender_main.cpp
pf-blotter_backend/tests/: test_market_sim.cpp  test_order_store.cpp
pf-blotter_frontend/: .gitignore  Dockerfile  index.html  netlify.toml  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json  vite.config.js  vite.config.ts
pf-blotter_frontend/src/: App.tsx  index.css  vite-env.d.ts
pf-blotter_frontend/src/components/: AdvancedAlgoPanel.tsx  AdvancedBacktester.tsx  AlgoPanel.tsx  AmendModal.tsx  AuthPage.tsx  BacktestPanel.tsx  Blotter.tsx  ConnectionIndicator.tsx  Dashboard.tsx  ErrorBoundary.tsx  LoadingSkeleton.tsx  MarketDataTicker.tsx  OrderBook.tsx  OrderForm.tsx  PerformanceMetrics.tsx  PositionTracker.tsx  TabNavigation.tsx  Toast.tsx
pf-blotter_frontend/src/components/analytics/: KellyCalculator.tsx  MonteCarloVaR.tsx  OptionsPricer.tsx  PortfolioOptimizer.tsx
pf-blotter_frontend/src/components/tabs/: AlgoTab.tsx  AnalyticsTab.tsx  BacktestTab.tsx  TradingTab.tsx
pf-blotter_frontend/src/hooks/: useAuth.ts  useKeyboardShortcuts.ts  useOrderStream.ts  useSound.ts  useTheme.ts  useWebSocket.ts
pf-blotter_frontend/src/types/: order.ts
pf-blotter_frontend/src/utils/: config.ts  format.ts
pf-blotter_frontend/src/workers/: backtestWorker.ts  monteCarloWorker.ts
